// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm renders correctly 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      className="inputform "
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders error and message 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      className="inputform error"
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  >
    Error message
  </div>
</form>
`;

exports[`InputForm renders focused input 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      autoFocus={true}
      className="inputform "
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders input id 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      className="inputform "
      id="testid"
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders success 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      className="inputform success"
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  />
</form>
`;

exports[`InputForm renders value 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <div
    className="inputform-container"
  >
    <input
      className="inputform "
      value="textfortest"
    />
    <div
      className="input-eye none"
    />
  </div>
  <div
    className="error-message"
  />
</form>
`;
